--- a/Pages/style_quiz.css
+++ b/Pages/style_quiz.css
@@ -1,40 +1,52 @@
 body {
-        font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-        background-color: rgb(31, 31, 31);
-        
-      }
-            .textBox {
-            display:flex;
-            flex-direction: column;
-            background-color: rgb(95, 91, 69);
-            color: rgb(225,225,225);
-            text-align: center;
-            border-style: solid;
-            border-color: rgb(211, 184, 115);
-            height: auto;
-            width: 50%;
-            margin: auto;
-            padding-left: 16px;
-            padding-right: 16px;
-        }
-        .quizBox {
-            display:flex;
-            flex-direction: column;
-            background-color: rgb(95, 91, 69);
-            color: rgb(225,225,225);
-            text-align: center;
-            border-style: solid;
-            border-color: rgb(211, 184, 115);
-            height: auto;
-            width: 50%;
-            margin: auto;
-            padding-left: 16px;
-            padding-right: 16px;
-            padding-top: 16px;
-            padding-bottom: 16px;
-        }
+  font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS",
+    sans-serif;
+  background-color: rgb(31, 31, 31);
+}
+.textBox {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(95, 91, 69);
+  color: rgb(225, 225, 225);
+  text-align: center;
+  border-style: solid;
+  border-color: rgb(211, 184, 115);
+  height: auto;
+  width: 50%;
+  margin: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+/*Specific styling for the quiz box*/
+.quizBox {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(95, 91, 69);
+  color: rgb(225, 225, 225);
+  text-align: center;
+  border-style: solid;
+  border-color: rgb(211, 184, 115);
+  height: auto;
+  width: 50%;
+  margin: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+button {
+  background-color: rgb(211, 184, 115);
+  color: rgb(71, 68, 52);
+  width: 25%;
+  margin: auto;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 18px;
+  border: rgb(138, 132, 102);
+  border-radius: 2px;
+}
+
 h1 {
-  color: rgb(225,225,225);
+  color: rgb(225, 225, 225);
   text-align: center;
 }
 span {
@@ -66,10 +78,11 @@ img {
   color: rgb(138, 132, 102);
   text-decoration: none;
 }
-
-input[type=text] {
+/*Name entry box styling*/
+input[type="text"] {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: rgb(71, 68, 52);
-  color: rgb(225,225,225);
+  color: rgb(225, 225, 225);
   border: 2px rgb(95, 91, 69);
   padding: 4px;
   margin: 10px 0;
@@ -77,7 +90,11 @@ input[type=text] {
   outline: none;
 }
 
-input[type=radio] {
+ul {
+  list-style-type: none;
+}
+
+input[type="radio"] {
   background-color: rgb(211, 184, 115);
   border: none;
 }
@@ -117,21 +134,28 @@ input[type=radio] {
   margin-left: 50px;
 }
 
-/*Pushes everything to the right when the sidebar is opened*/ 
+/*Pushes everything to the right when the sidebar is opened*/
 #main {
-  transition: margin-left .5s;
+  transition: margin-left 0.5s;
   padding: 20px;
 }
 
 /*Adjusts text for mobile phone view*/
 @media screen and (max-height: 450px) {
-  .sideNav {padding-top: 15px;}
-  .sideNav a {font-size: 18px;}
-  .logoHeader {width: 0; height: 0;}
+  .sideNav {
+    padding-top: 15px;
+  }
+  .sideNav a {
+    font-size: 18px;
+  }
+  .logoHeader {
+    width: 0;
+    height: 0;
+  }
 }
 
 .footerDisc {
-  color: rgb(225,225,225);
+  color: rgb(225, 225, 225);
   font-size: 13px;
   text-align: left;
   margin-left: 120px;
