--- a/Pages/style.css
+++ b/Pages/style.css
@@ -115,10 +115,17 @@ img {
   .logoHeader {width: 0; height: 0;}
 }
 
+@media screen and (max-width: 600px) {
+  .textBox {
+    width:90%;
+  }
+}
+
 .footerDisc {
   color: rgb(225,225,225);
   font-size: 13px;
   text-align: left;
-  margin-left: 120px;
-  margin-right: 120px;
+  margin:auto;
+  width: 100%;
+  padding: 16px;
 }
