--- a/Pages/style_nr.css
+++ b/Pages/style_nr.css
@@ -99,6 +99,12 @@ img {
   .logoHeader {width: 0; height: 0;}
 }
 
+@media screen and (max-width: 600px) {
+  .textBox {
+    width:90%;
+  }
+}
+
 .footerDisc {
   color: rgb(225,225,225);
   font-size: 13px;
